<resources>
    <string name="app_name">Basketball_App</string>

    <string name="gps_fixed">Following GPS</string>
    <string name="gps_not_fixed">Stopped Following GPS</string>

    <string name="court_search">Search...</string>

    <string name="court_name">Name</string>
    <string name="court_address">Address</string>
    <string name="court_add_event">+ Add Event</string>
    <string name="court_refresh">Refresh</string>
    <string name="court_event_view">View</string>
    <string name="court_subscribe">Subscribe</string>
    <string name="court_unsubscribe">Unsubscribe</string>
    <string name="court_subscribed">Subscribed</string>
    <string name="court_unsubscribed">Unsubscribed</string>

    <string name="court_event_no_desc">No description</string>

    <string name="court_event_add">Add an event</string>
    <string name="court_event_add_name">Name</string>
    <string name="court_event_add_time">Time</string>
    <string name="court_event_add_time_change">Change</string>
    <string name="court_event_add_description">Description</string>

    <string name="court_event_notif_title">Notifications Scheduled</string>
    <string name="court_event_notif_desc">You will be notified 1 week, day, hour before and when the event happens</string>

    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Okay</string>
    <string-array name="player_sort_options">
        <item>Most PPG</item>
        <item>Best FG%</item>
        <item>Best 3PT%</item>
    </string-array>

    <string name="placeholder">Placeholder</string>
</resources>